# finExtract

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Example-Apple-EN.xlsx  README.md  docker-compose.yml  pyproject.toml  statement.csv
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 0001_create_extractions_and_line_items.py  0002_multi_year_extractions_and_category.py  0003_company_identity.py  0004_extraction_label.py  0005_extraction_owner.py
frontend/: Dockerfile  middleware.ts  next.config.mjs  nginx.conf  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.tsbuildinfo  vite.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/components/: app-sidebar.tsx  language-switcher.tsx
frontend/components/pages/: charts.tsx  data-viewer.tsx  extractions.tsx  filing-search.tsx  landing.tsx
frontend/lib/: statement-transform.ts  types.ts
frontend/lib/api/: auth-token.ts  client.ts  companies.ts  extractions.ts  types.ts
frontend/lib/i18n/: index.tsx
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts  companies.ts  extractions.ts  types.ts
frontend/src/components/: ConfidenceBadge.tsx  ExportButtons.tsx  (+2 more)
infra/: README.md  main.tf  outputs.tf  terraform.tfvars.example  variables.tf  versions.tf  wif.tf
src/finextract/: main.py
tests/export/: test_csv_exporter.py  test_pivot_exporter.py  test_statement_template.py
tests/extraction/: test_extract_filing.py  test_xbrl_pipeline_integration.py
tests/fixtures/: acme.xbrl
tests/mapping/: test_taxonomy_mapper.py
(+40 files in other folders)
